test-package-compiler/src/snapshots/test_package_compiler__generated_tests__alias_unqualified_import.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/alias_unqualified_import"
---
//// /out/lib/the_package/_rakun_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/one.cache_meta
<77 byte binary>

//// /out/lib/the_package/_rakun_artefacts/one.erl
-module(one).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([id/1]).
-export_type([empty/0]).

-type empty() :: empty.

-file("src/one.rakun", 2).
-spec id(I) -> I.
id(X) ->
    X.


//// /out/lib/the_package/_rakun_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/two.cache_meta
<88 byte binary>

//// /out/lib/the_package/_rakun_artefacts/two.erl
-module(two).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([make/0]).

-file("src/two.rakun", 4).
-spec make() -> one:empty().
make() ->
    one:id(empty).


//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.
