test-package-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_import.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 74
expression: "./cases/erlang_import"
---
//// /out/lib/the_package/_rakun_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/one.cache_meta
<88 byte binary>

//// /out/lib/the_package/_rakun_artefacts/one.erl
-module(one).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([unbox/1]).

-file("src/one.rakun", 3).
-spec unbox(two:box()) -> integer().
unbox(X) ->
    {box, I} = X,
    I.


//// /out/lib/the_package/_rakun_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/two.cache_meta
<57 byte binary>

//// /out/lib/the_package/_rakun_artefacts/two.erl
-module(two).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([box/0]).

-type box() :: {box, integer()}.




//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.
