test-package-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_nested.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 96
expression: "./cases/erlang_nested"
---
//// /out/lib/the_package/_rakun_artefacts/one@two.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/one@two.cache_meta
<57 byte binary>

//// /out/lib/the_package/_rakun_artefacts/one@two.erl
-module(one@two).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("src/one/two.rakun", 1).
-spec main() -> binary().
main() ->
    <<"Hi there"/utf8>>.


//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one@two]},
    {registered, []}
]}.
