test-package-compiler/src/snapshots/test_package_compiler__generated_tests__import_shadowed_name_warning.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/import_shadowed_name_warning"
---
//// /out/lib/the_package/_rakun_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/one.cache_meta
<53 byte binary>

//// /out/lib/the_package/_rakun_artefacts/one.erl
-module(one).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([port_/0]).

-type port_() :: any().




//// /out/lib/the_package/_rakun_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/two.cache_meta
<120 byte binary>

//// /out/lib/the_package/_rakun_artefacts/two.erl
-module(two).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([use_type/1]).
-export_type([shadowing/0]).

-type shadowing() :: port.

-file("src/two.rakun", 14).
-spec use_type(one:port_()) -> nil.
use_type(Port) ->
    wibble:wobble(Port).


//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.


//// Warning
warning: Unused private constructor
  ┌─ src/two.rakun:9:3
  │
9 │   Port
  │   ^ This private constructor is never used

Hint: You can safely remove it.



//// Warning
warning: Unused private type
  ┌─ src/two.rakun:7:1
  │
7 │ record Shadowing {
  │ ^ This private type is never used

Hint: You can safely remove it.
